--- a/components/dashboard/editor.html
+++ b/components/dashboard/editor.html
@@ -33,7 +33,8 @@
 
   <script src="https://editor.unlayer.com/embed.js"></script>
   
-  <script src="editor.js"></script>
+  <script type="module" src="editor.js"></script>
   
 </body>
+
 </html>
