--- a/components/dashboard/index.html
+++ b/components/dashboard/index.html
@@ -243,35 +243,35 @@
           <span class="avatar">ER</span>
           <div class="inbox-msg">
             <span class="msg-title">Elizabeth Reynolds mentioned you</span>
-            <span class="msg-meta">10 min ago · Marketing and PM</span>
+            <span class="msg-meta">10 min ago Â· Marketing and PM</span>
           </div>
         </li>
         <li>
           <span class="avatar">SW</span>
           <div class="inbox-msg">
             <span class="msg-title">Sonya Wolf joined Next Platform project</span>
-            <span class="msg-meta">16 min ago · Next Platform</span>
+            <span class="msg-meta">16 min ago Â· Next Platform</span>
           </div>
         </li>
         <li>
           <span class="avatar">KO</span>
           <div class="inbox-msg">
-            <span class="msg-title">Kenny Osinski: Hi everyone! Let’s discuss…</span>
-            <span class="msg-meta">1 hour ago · General</span>
+            <span class="msg-title">Kenny Osinski: Hi everyone! LetÂ’s discussÂ…</span>
+            <span class="msg-meta">1 hour ago Â· General</span>
           </div>
         </li>
         <li>
           <span class="avatar">AZ</span>
           <div class="inbox-msg">
             <span class="msg-title">Alexey Zinovyev added new tag to Issues</span>
-            <span class="msg-meta">3 hours ago · CRM</span>
+            <span class="msg-meta">3 hours ago Â· CRM</span>
           </div>
         </li>
         <li>
           <span class="avatar">BC</span>
           <div class="inbox-msg">
             <span class="msg-title">Billy Christiansen changed status to In Progress</span>
-            <span class="msg-meta">4 hours ago · Marketing and PM</span>
+            <span class="msg-meta">4 hours ago Â· Marketing and PM</span>
           </div>
         </li>
       </ul>
@@ -303,6 +303,7 @@
       </div>
     </div>
   </div>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
+
 </html>
