--- a/components/dashboard/index.html
+++ b/components/dashboard/index.html
@@ -19,6 +19,7 @@
           <a href="#" class="nav-link active" data-view="dashboard"><span>??</span> Dashboard</a>
           <a href="#" class="nav-link" data-view="leads"><span>??</span> My Leads</a>
           <a href="#" class="nav-link" data-view="campaigns"><span>??</span> Campaigns</a>
+		  <a href="#" class="nav-link" data-view="settings"><span>??</span> Settings</a>
         </nav>
         <div class="projects">
           <div class="projects-section">
@@ -307,3 +308,4 @@
 </body>
 
 </html>
+
