--- a/components/dashboard/login.html
+++ b/components/dashboard/login.html
@@ -480,7 +480,7 @@
       
       // 2. --- NEW: Send a message to the Chrome Extension ---
       // We must check if the extension is installed
-      const EXTENSION_ID = "YOUR_EXTENSION_ID_HERE"; // Get this from chrome://extensions
+      const EXTENSION_ID = "inaglokendpgeojaoeadhkdnoneckbio"; // Get this from chrome://extensions
       try {
         chrome.runtime.sendMessage(EXTENSION_ID, {
           type: "AUTH_SUCCESS",
